--- a/bsjfourth.html
+++ b/bsjfourth.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <section id="bsj4" class="section">
+    <section id="bsj4" class="bsj-section">
         <div id="bsj-fourth-header">
             <div>SERVICE</div>
             <span>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</span>
@@ -27,7 +27,7 @@
             <div class="bsj-fourth-maincard">
                 
             </div>
-            
+
  
         </div>
 
