--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="kes.css">
     <link rel="stylesheet" href="ktr.css">
+    <link rel="stylesheet" href="khj.css">
     <title>Document</title>
 </head>
 
@@ -15,7 +16,31 @@
     <section id="cms3"></section>
     <section id="bsj4"></section>
     <section id="bsj5"></section>
-    <section id="khj6"></section>
+    <section id="khj6">
+        <div class="kes--testimonials-header">
+            <h2 class="kes--header-title">Portfolio</h2>
+            <div class="kes--header-divider">
+                <div></div>
+                <div></div>
+            </div>
+            <p class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        </div>
+        <div class="khj-container">
+          <div class="khj-layout">
+            <ul class="khj-menu">
+              <li class="khj-selected khj-menu-deco">All</li>
+              <li class="khj-menu-deco">App</li>
+              <li class="khj-menu-deco">Card</li>
+              <li class="khj-menu-deco">Web</li>
+            </ul>
+            <div class="khj-gridcontainer">
+              <div class="khj-col-1"></div>
+              <div class="khj-col-2"></div>
+              <div class="khj-col-3"></div>
+            </div>
+          </div>
+        </div>
+    </section>
     <section id="bsj7"></section>
     <section id="kes8">
         <div class="kes--testimonials-header">
