1번 반정도  구현

--- a/index.html
+++ b/index.html
@@ -3,12 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./cms.css">
     <title>Document</title>
 </head>
 <body>
-    <section id="cms1"></section>
-    <section id="cms2"></section>
-    <section id="cms3"></section>
+    <section id="cms1">
+        <div class="cms__main__container">
+            <div class="cms__main">
+                <div class="cms__main-left">
+                    <h1>Better Solutions For Your Business</h1>
+                    <p>We are team of talented designers making websites with Bootstrap</p>
+                    <div>
+                        <a href="#" id="cms__firsta">Get Started</a>
+                        <a href="#" id="cms__seconda">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                            <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
+                          </svg>
+                          Watch Video
+                        </a>
+                    </div>
+                </div>
+                <div class="cms__main-right">
+                    <img src="./images/hero-img.png" alt="first-img">
+                </div>
+            </div>
+        </div>
+
+        
+        <div class="cms__main__underBar">
+            <div class="cms__underBar">
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">                    </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+                <div class="cms__underBarImageContainer">
+                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="cms2">
+        <div class="kes--testimonials-header">
+            <h2 class="kes--header-title">TESTIMONIALS</h2>
+            <div class="kes--header-divider">
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div>
+                    <P class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</P>
+                </div>
+                <div>
+                    <P class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</P>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="cms3">
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+    </section>
     <section id="bsj4"></section>
     <section id="bsj5"></section>
     <section id="khj6"></section>
