--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./cms.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <header></header>
     <section id="cms1">
         <div class="cms__main__container">
             <div class="cms__main">
@@ -20,7 +22,7 @@
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                             <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
                           </svg>
-                          Watch Video
+                          Watch video
                         </a>
                     </div>
                 </div>
@@ -34,60 +36,176 @@
         <div class="cms__main__underBar">
             <div class="cms__underBar">
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-1.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">                    </div>
-                <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-2.png" alt="underBar">                    
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-3.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-4.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-5.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-6.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-7.png" alt="underBar">
                 </div>
                 <div class="cms__underBarImageContainer">
-                    <img class="cms__underBar-image" src="./images/underBar1.png" alt="underBar">
+                    <img class="cms__underBar-image" src="./images/client-8.png" alt="underBar">
                 </div>
             </div>
         </div>
     </section>
     <section id="cms2">
+    <div clss="cms__aboutUs">
         <div class="kes--testimonials-header">
-            <h2 class="kes--header-title">TESTIMONIALS</h2>
+            <h2 class="kes--header-title">ABOUT US</h2>
             <div class="kes--header-divider">
                 <div></div>
                 <div></div>
             </div>
-            <div>
+            <div class="cms__usDescription">
                 <div>
-                    <P class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</P>
+                    <P class="kes--header-description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </P>
+                    <ul>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#47b2e4" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                                <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                            </svg>
+                            <p class="kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#47b2e4" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                                <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                            </svg>
+                            <p class="kes--header-description">Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#47b2e4" class="bi bi-check2-circle" viewBox="0 0 16 16">
+                                <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
+                                <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+                            </svg>
+                            <p class="kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo</p>
+                        </li>
+                    </ul>
                 </div>
-                <div>
-                    <P class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</P>
+                <div class="cms__readmore_par">
+                    <P class="kes--header-description">
+                        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </P>
+                    <a class="cms-readmore" href="#">
+                        <span>Read More</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
     </section>
     <section id="cms3">
-        <div>
-            <div></div>
-            <div></div>
+    <div class="cms3__container">
+        <div class="cms3__upperPage">
+            <div class="cms3__upleft">
+                <h2>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h2>
+                <p class="kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+                <div class="cms3__upleft__boxCon">
+                    <div class="cms3__upleft__box">
+                        <input type="checkbox" id="cms-toggle1" class="cms3__toggle">
+                        <label for="cms-toggle1">
+                          <h3><span class="cms_leftBoxNum">01 </span> Non consectetur a erat nam at lectus urna duis?</h3>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>
+                        </label>
+                        <p>
+                          Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                        </p>
+                    </div>
+                    <div class="cms3__upleft__box">
+                        <input type="checkbox" id="cms-toggle2" class="cms3__toggle">
+                        <label for="cms-toggle2">
+                          <h3><span class="cms_leftBoxNum">02 </span> Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h3>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>
+                        </label>
+                        <p>
+                          Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                        </p>
+                      </div>
+                  
+                    <div class="cms3__upleft__box">
+                        <input type="checkbox" id="cms-toggle3" class="cms3__toggle">
+                        <label for="cms-toggle3">
+                          <h3><span class="cms_leftBoxNum">03 </span> Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>
+                        </label>
+                        <p>
+                          Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cms3__upright">
+                <img src="./images/why-us.png" alt="why-us">
+            </div>
         </div>
-        <div>
-            <div></div>
-            <div></div>
+        <div class="cms3__downPage">
+            <div class="cms3__downCon">
+                <div class="cms3__downleft">
+                    <img src="./images/skills.png" alt="why-us">
+                </div>
+                <div class="cms3__downRight">
+                    <h2><strong>Voluptatem dignissimos provident quasi corporis voluptas</strong></h2>
+                    <p style="font-style: italic !important;"class="kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="cms3__percent_Con">
+                        <div class="cms3__percent">
+                            <span>HTML</span>
+                            <span>100%</span>
+                            <div class="cms__bar">
+                                <div class="cms__barPercent p100"> </div>
+                            </div>
+                        </div>
+                        <div class="cms3__percent">
+                            <span>HTML</span>
+                            <span>90%</span>
+                            <div class="cms__bar">
+                                <div class="cms__barPercent p90"> </div>
+                            </div>
+                        </div>
+                        <div class="cms3__percent">
+                            <span>HTML</span>
+                            <span>75%</span>
+                            <div class="cms__bar">
+                                <div class="cms__barPercent p75"> </div>
+                            </div>
+                        </div>
+                        <div class="cms3__percent">
+                            <span>HTML</span>
+                            <span>55%</span>
+                            <div class="cms__bar">
+                                <div class="cms__barPercent p55"> </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
     </section>
     <section id="bsj4"></section>
     <section id="bsj5"></section>
