team page 완성/portfolio animation 완성해야 합니다.

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
           <div class="khj-layout">
             <form class="khj-menu-container">
                 <label class="khj-radio">
-                  <input type="radio" name="options" value="All" checked>
+                  <input type="radio" name="options" value="All" id="khj-All" checked>
                   <div class="custom-khj-radio">All</div> 
                 </label>
                 <label class="khj-radio">
-                  <input type="radio" name="options" value="App">
+                  <input type="radio" name="options" value="App" id="khj-App">
                   <div class="custom-khj-radio">App</div> 
                 </label>
                 <label class="khj-radio">
-                  <input type="radio" name="options" value="Card">
+                  <input type="radio" name="options" value="Card" id="khj-Card">
                   <div class="custom-khj-radio">Card</div>
                 </label>
                 <label class="khj-radio">
-                    <input type="radio" name="options" value="web">
+                    <input type="radio" name="options" value="Web" id="khj-Web">
                     <div class="custom-khj-radio">Web</div>
                   </label>
               </form>
             <div class="khj-gridcontainer">
               <div class="khj-col">
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-App">
                     <img src="./img/masonry-portfolio-1.jpg" alt="image1" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
             </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Branding">
                     <img src="./img/masonry-portfolio-6.jpg" alt="image6" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <div class="khj-col">
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Product">
                     <img src="./img/masonry-portfolio-2.jpg" alt="image2" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Product">
                     <img src="./img/masonry-portfolio-5.jpg" alt="image5" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Branding">
                     <img src="./img/masonry-portfolio-9.jpg" alt="image9" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="khj-col">
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Branding">
                     <img src="./img/masonry-portfolio-3.jpg" alt="image3" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-App">
                     <img src="./img/masonry-portfolio-4.jpg" alt="image4" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-App">
                     <img src="./img/masonry-portfolio-7.jpg" alt="image7" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
@@ -155,11 +155,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="khj-img-container">
+                <div class="khj-img-container khj-Product">
                     <img src="./img/masonry-portfolio-8.jpg" alt="image8" class="khj-img">
                     <div class="khj-hidden khj-img-description">
                         <div class="khj-left-description">
-                            <h4>product 3</h4>
+                            <h4>Product 3</h4>
                             <p>Lorem ipsum, dolor sit</p>
                         </div>
                         <div class="khj-right-description">
@@ -171,6 +171,86 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="kes--testimonials-header">
+            <h2 class="kes--header-title">Team</h2>
+            <div class="kes--header-divider">
+                <div></div>
+                <div></div>
+            </div>
+            <p class="kes--header-description">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        </div>
+        <div class="khj-container-2-wrapper">
+            <div class="khj-container-2">
+                <div class="khj-person-info-card">
+                    <div class="khj-person-img-container">
+                        <img src="./img/team-1.jpg" alt="team-1">
+                    </div>
+                    <div class="khj-person-info-container">
+                        <h4>Walter White</h4>
+                        <p>Chief Executive Officer</p>
+                        <div class="khj-line"></div>
+                        <div>Explicabo voluptatem mollitia et repellat qui dolorum quasi</div>
+                        <div class="khj-sns-container">
+                            <a class="khj-sns-logo-container"><img src="./img/X logo.png" alt="x" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/Facebook logo.png" alt="facebook" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/instagram logo.png" alt="instagram" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/linkdin logo.png" alt="linkdin" class="khj-sns-logo"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="khj-person-info-card">
+                    <div class="khj-person-img-container">
+                        <img src="./img/team-2.jpg" alt="team-1">
+                    </div>
+                    <div class="khj-person-info-container">
+                        <h4>Sarah Jhonson</h4>
+                        <p>Product Manager</p>
+                        <div class="khj-line"></div>
+                        <div>Aut maiores voluptates amet et quis praesentium qui senda para</div>
+                        <div class="khj-sns-container">
+                            <a class="khj-sns-logo-container"><img src="./img/X logo.png" alt="x" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/Facebook logo.png" alt="facebook" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/instagram logo.png" alt="instagram" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/linkdin logo.png" alt="linkdin" class="khj-sns-logo"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="khj-person-info-card">
+                    <div class="khj-person-img-container">
+                        <img src="./img/team-3.jpg" alt="team-1">
+                    </div>
+                    <div class="khj-person-info-container">
+                        <h4>William Anderson</h4>
+                        <p>CTO</p>
+                        <div class="khj-line"></div>
+                        <div>Quisquam facilis cum velit laborum corrupti fuga rerum quia</div>
+                        <div class="khj-sns-container">
+                            <a class="khj-sns-logo-container"><img src="./img/X logo.png" alt="x" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/Facebook logo.png" alt="facebook" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/instagram logo.png" alt="instagram" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/linkdin logo.png" alt="linkdin" class="khj-sns-logo"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="khj-person-info-card">
+                    <div class="khj-person-img-container">
+                        <img src="./img/team-4.jpg" alt="team-1">
+                    </div>
+                    <div class="khj-person-info-container">
+                        <h4>Amanda Jepson</h4>
+                        <p>Accountant</p>
+                        <div class="khj-line"></div>
+                        <div>Dolorum tempora officiis odit laborum officiis et et accusamus</div>
+                        <div class="khj-sns-container">
+                            <a class="khj-sns-logo-container"><img src="./img/X logo.png" alt="x" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/Facebook logo.png" alt="facebook" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/instagram logo.png" alt="instagram" class="khj-sns-logo"></a>
+                            <a class="khj-sns-logo-container"><img src="./img/linkdin logo.png" alt="linkdin" class="khj-sns-logo"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--<section id="bsj7"></section>
