--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="cms3"></section>
     <section id="bsj4"></section>
     <section id="bsj5"></section>
-    <section id="khj6">
+    <section id="khj6-1">
         <div class="kes--testimonials-header">
             <h2 class="kes--header-title">Portfolio</h2>
             <div class="kes--header-divider">
@@ -172,6 +172,8 @@
             </div>
           </div>
         </div>
+    </section>
+    <section id="khj6-2">
         <div class="kes--testimonials-header">
             <h2 class="kes--header-title">Team</h2>
             <div class="kes--header-divider">
