--- a/index.html
+++ b/index.html
@@ -170,6 +170,131 @@
                 </div>
               </div>
             </div>
+            <div class="khj-flexcontainer">
+                <div class="khj-col">
+                  <div class="khj-img-container khj-App">
+                      <img src="./img/masonry-portfolio-1.jpg" alt="image1" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>App 1</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+              </div>
+                  <div class="khj-img-container khj-Branding">
+                      <img src="./img/masonry-portfolio-6.jpg" alt="image6" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Branding 2</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="khj-col">
+                  <div class="khj-img-container khj-Product">
+                      <img src="./img/masonry-portfolio-2.jpg" alt="image2" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Product 1</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="khj-img-container khj-Product">
+                      <img src="./img/masonry-portfolio-5.jpg" alt="image5" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Product 2</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="khj-img-container khj-Branding">
+                      <img src="./img/masonry-portfolio-9.jpg" alt="image9" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Branding 3</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+                <div class="khj-col">
+                  <div class="khj-img-container khj-Branding">
+                      <img src="./img/masonry-portfolio-3.jpg" alt="image3" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Branding 1</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="khj-img-container khj-App">
+                      <img src="./img/masonry-portfolio-4.jpg" alt="image4" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>App 2</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="khj-img-container khj-App">
+                      <img src="./img/masonry-portfolio-7.jpg" alt="image7" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>App 3</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="khj-img-container khj-Product">
+                      <img src="./img/masonry-portfolio-8.jpg" alt="image8" class="khj-img">
+                      <div class="khj-hidden khj-img-description">
+                          <div class="khj-left-description">
+                              <h4>Product 3</h4>
+                              <p>Lorem ipsum, dolor sit</p>
+                          </div>
+                          <div class="khj-right-description">
+                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                              <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
+                          </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
     </section>
