돋보기 기능 제외 구현 완료

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <section id="bsj4"></section>
     <section id="bsj5"></section>
     <section id="khj6-1">
+            <div class="khj-lightbox" id="khj-App-lightbox">
+                <div class="lightbox-content">
+                  <button class="lightbox-prev">←</button>
+                  <img src="./img/masonry-portfolio-1.jpg" alt="Sample Image">
+                  <button class="lightbox-next">→</button>
+                </div>
+                <div class="lightbox-caption">App 2</div>
+            </div>
+        <div class="khj-hidden-img-scale-up" id="khj-Branding-scale-up"></div>
+        <div class="khj-hidden-img-scale-up" id="khj-Product-scale-up"></div>
         <div class="kes--testimonials-header">
             <h2 class="kes--header-title">Portfolio</h2>
             <div class="kes--header-divider">
@@ -55,9 +65,11 @@
                               <p>Lorem ipsum, dolor sit</p>
                           </div>
                           <div class="khj-right-description">
-                              <a href="#"><img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img></a>
+                            <a href="#">
+                                <img class="khj-description-icon" src="./img/search_icon.png" alt="App1"></img>
+                            </a>
                               <a href="#"><img class="khj-description-icon" src="./img/link_icon.png" alt="More details"></img></a>
-                          </div>
+                        </div>
                       </div>
               </div>
                   <div class="khj-img-container khj-Branding">
@@ -255,7 +267,7 @@
             </div>
         </div>
     </section>
-    <!--<section id="bsj7"></section>
+    <section id="bsj7"></section>
     <section id="kes8">
         <div class="kes--testimonials-header">
             <h2 class="kes--header-title">TESTIMONIALS</h2>
@@ -448,7 +460,7 @@
             </div>
         </div>
     </section>
-    <section id="ktr11"></section>-->
+    <section id="ktr11"></section>
 </body>
 
 </html>
