--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
     </section>
     <section id="cms2">
     <div clss="cms__aboutUs">
-        <div class="kes--testimonials-header">
-            <h2 class="kes--header-title">ABOUT US</h2>
-            <div class="kes--header-divider">
+        <div class="cms_kes--testimonials-header">
+            <h2 class="cms_kes--header-title">ABOUT US</h2>
+            <div class="cms_kes--header-divider">
                 <div></div>
                 <div></div>
             </div>
             <div class="cms__usDescription">
                 <div>
-                    <P class="kes--header-description">
+                    <P class="cms_kes--header-description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     </P>
                     <ul>
@@ -169,26 +169,26 @@
                                 <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
                                 <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
                             </svg>
-                            <p class="kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="cms_kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#47b2e4" class="bi bi-check2-circle" viewBox="0 0 16 16">
                                 <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
                                 <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
                             </svg>
-                            <p class="kes--header-description">Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+                            <p class="cms_kes--header-description">Duis aute irure dolor in reprehenderit in voluptate velit.</p>
                         </li>
                         <li>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#47b2e4" class="bi bi-check2-circle" viewBox="0 0 16 16">
                                 <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
                                 <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
                             </svg>
-                            <p class="kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo</p>
+                            <p class="cms_kes--header-description">Ullamco laboris nisi ut aliquip ex ea commodo</p>
                         </li>
                     </ul>
                 </div>
                 <div class="cms__readmore_par">
-                    <P class="kes--header-description">
+                    <P class="cms_kes--header-description">
                         Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </P>
                     <a class="cms-readmore" href="#">
@@ -207,7 +207,7 @@
         <div class="cms3__upperPage">
             <div class="cms3__upleft">
                 <h2>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h2>
-                <p class="kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+                <p class="cms_kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
                 <div class="cms3__upleft__boxCon">
                     <div class="cms3__upleft__box">
                         <input type="checkbox" id="cms-toggle1" class="cms3__toggle">
@@ -259,7 +259,7 @@
                 </div>
                 <div class="cms3__downRight">
                     <h2><strong>Voluptatem dignissimos provident quasi corporis voluptas</strong></h2>
-                    <p style="font-style: italic !important;"class="kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p style="font-style: italic !important;"class="cms_kes--header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="cms3__percent_Con">
                         <div class="cms3__percent">
                             <span>HTML</span>
