--- a/index.html
+++ b/index.html
@@ -281,21 +281,21 @@
                             </div>
                         </div>
                         <div class="cms3__percent">
-                            <span>HTML</span>
+                            <span>css</span>
                             <span>90%</span>
                             <div class="cms__bar">
                                 <div class="cms__barPercent p90"> </div>
                             </div>
                         </div>
                         <div class="cms3__percent">
-                            <span>HTML</span>
+                            <span>JAVASCRIPT</span>
                             <span>75%</span>
                             <div class="cms__bar">
                                 <div class="cms__barPercent p75"> </div>
                             </div>
                         </div>
                         <div class="cms3__percent">
-                            <span>HTML</span>
+                            <span>PHOTOSHOP</span>
                             <span>55%</span>
                             <div class="cms__bar">
                                 <div class="cms__barPercent p55"> </div>
