--- a/index.html
+++ b/index.html
@@ -932,11 +932,11 @@
                 </div>
             </div>
             <div class="kes--testimonials-body-buttons">
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
             </div>
         </div>
     </section>
@@ -1061,11 +1061,11 @@
                         </p>
                     </div>
                 </div>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
             </div>
         </div>
     </section>
