--- a/index.html
+++ b/index.html
@@ -362,17 +362,7 @@
             <a id="bsj-callocation-button" href="#">Call To Action</a>
         </div>
     </section>
-    <section id="khj6-1">
-            <div class="khj-lightbox" id="khj-App-lightbox">
-                <div class="lightbox-content">
-                  <button class="lightbox-prev">←</button>
-                  <img src="./img/masonry-portfolio-1.jpg" alt="Sample Image">
-                  <button class="lightbox-next">→</button>
-                </div>
-                <div class="lightbox-caption">App 2</div>
-            </div>
-        <div class="khj-hidden-img-scale-up" id="khj-Branding-scale-up"></div>
-        <div class="khj-hidden-img-scale-up" id="khj-Product-scale-up"></div>
+    <section id="khj6-1"> 
         <div class="kes--testimonials-header">
             <h2 class="kes--header-title">Portfolio</h2>
             <div class="kes--header-divider">
@@ -400,7 +390,7 @@
                     <input type="radio" name="options" value="Web" id="khj-Web">
                     <div class="custom-khj-radio">Web</div>
                   </label>
-              </form>
+            </form>
             <div class="khj-flexcontainer">
                 <div class="khj-col">
                   <div class="khj-img-container khj-App">
@@ -527,9 +517,11 @@
                       </div>
                   </div>
                 </div>
-              </div>
+            </div>
           </div>
         </div>
+
+
     </section>
     <section id="khj6-2">
         <div class="kes--testimonials-header">
@@ -673,8 +665,7 @@
             </div>
 
 
-            <!--두번쨰카드-->
-            <div class="bsj-seventh-maincard" id="bsj-seventh-maincard-2">
+            <!--두번쨰카드--><div class="bsj-seventh-maincard" id="bsj-seventh-maincard-2">
             
                 <div class="bsj-fourth-maincard-title">Business Plan</div>
                 <div class="bsj-price">
